updated primary colour and title

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 						<div class="content">
 							<div class="inner">
 								<header>
-									<h1>Indivisible</h1>
-									<p>Ipsum feugiat lorem sed magna<br />
-									etiam adipiscing phasellus</p>
+									<h1>The Goooseberry Bush</h1>
+									<p>Clothing & Interiors<br />
+									Jersey</p>
 								</header>
 								<nav id="nav">
 									<ul class="actions stacked special animated spinY">
@@ -38,9 +38,8 @@
 									</ul>
 								</nav>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 							</div>
