Changed colouring and changed animations

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 						<div class="content">
 							<div class="inner">
 								<header>
-									<h1>The Goooseberry Bush</h1>
+									<h1>The Gooseberry Bush</h1>
 									<p>Clothing & Interiors<br />
 									Jersey</p>
 								</header>
 								<nav id="nav">
 									<ul class="actions stacked special animated spinY">
-										<li><a href="#work" class="button">Work</a></li>
+										<li><a href="#work" class="button">Brands</a></li>
 										<li><a href="#about" class="button">About</a></li>
 										<li><a href="#contact" class="button">Contact</a></li>
 										<!--<li><a href="#elements" class="button">Elements</a></li>-->
@@ -380,7 +380,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled</p>
+						<p class="copyright">The Gooseberry Bush, Jersey</p>
 					</footer>
 
 			</div>
