--- a/index.html
+++ b/index.html
@@ -101,24 +101,8 @@
 								<header>
 									<h2>Contact</h2>
 								</header>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="5"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><a href="" class="button submit">Send Message</a></li>
-									</ul>
+								<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10425.263164295795!2d-2.109139!3d49.2135379!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf38864e6d17feed1!2sThe%20Gooseberry%20Bush!5e0!3m2!1sen!2sje!4v1608727840175!5m2!1sen!2sje" 
+								width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 								</form>
 							</div>
 						</div>
