--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 								</header>
 								<nav id="nav">
 									<ul class="actions stacked special animated spinY">
-										<li><a href="#work" class="button">Brands</a></li>
 										<li><a href="#about" class="button">About</a></li>
-										<li><a href="#contact" class="button">Contact</a></li>
+										<li><a href="#work" class="button">Brands</a></li>
+										<li><a href="#contact" class="button">Find Us</a></li>
 										<!--<li><a href="#elements" class="button">Elements</a></li>-->
 									</ul>
 								</nav>
@@ -99,7 +99,7 @@
 							</ul>
 							<div class="inner">
 								<header>
-									<h2>Contact</h2>
+									<h2>Find Us</h2>
 								</header>
 								<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10425.263164295795!2d-2.109139!3d49.2135379!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf38864e6d17feed1!2sThe%20Gooseberry%20Bush!5e0!3m2!1sen!2sje!4v1608727840175!5m2!1sen!2sje" 
 								width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
